# cuttlefish

./: .gitignore  README.md  pyproject.toml  start.sh
.github/workflows/: test.yml
cuttlefish/: __main__.py  auth.py  config.py  cruft.py  db.py  probe.py  scanner.py  subtitles.py  thumbnails.py  titles.py  tls.py
cuttlefish/clients/: opensubtitles.py  tmdb.py
cuttlefish/server/: __init__.py  app.py  cast.py  scan_tracker.py  streaming.py
cuttlefish/workers/: asr.py  encoder.py
docs/: casting.md  configuration.md  tls.md
tests/: conftest.py  test_admin_pages.py  test_asr_chunking.py  test_auth.py  test_auto_scan.py  test_bootstrap_account.py  test_cast.py  test_clients.py  test_config_libraries.py  test_continue_watching_home.py  test_cruft.py  test_encoder.py  test_episode_navigation.py  test_login_required.py  test_mark_watched.py  test_multi_subtitles.py  test_posters_duration.py  test_scanner.py  test_search_etc.py  test_server.py  test_stale_jobs.py  test_subtitles_admin.py  test_thumbnails.py  test_titles.py  test_tls.py  test_tv_audiobook.py  test_tv_jellyfin_ux.py  test_users_admin.py  test_watch_stats_and_series_reset.py
